+ docker-compose + tests